# Neo_WS

./: .gitattributes  60Hz_camera.yaml  60hz_calibrated_August_3_2022_camera.yaml  LICENSE  README.md  Ship-tracking_camera_nnotes  camera.yaml  camera_changed_June_15.yaml  camera_parameters  fish_eye_camera.yaml  fish_eye_camera_1.2yaml  fish_eye_camera_1.yaml  fish_eye_camera_2_(matlab_without_skew).yaml  fish_eye_camera_3_(matlab_with_everything).yaml  fish_eye_camera_4_(matlab_without_skew and tangential) (another copy).yaml  fish_eye_camera_5_(matlab_minimum params) (copy).yaml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
launch/: land.launch  old_land.launch
logs/RealSense/: build.check.006.log.stderr  build.cmake.002.log.stderr  build.cmake.003.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  (+2 more)
scripts/: Lidar.py  Lidar_Lite.py  Lidar_Lite_v4.py  basic_IO.py  basic_autonomy.py  cmd_server.py  gcs_basic.py  landing_pos_KF.py  landing_vel_KF.py  main  odom.py  odom_landing.py  odom_landing_new.py  odom_rs.py  odom_rs_ship.py  odom_tracking.py  odom_tracking_new.py  odom_tracking_new_vel.py  odom_tracking_new_vel_KF.py  odometry.py  odometry1.py  odometry2.py  odometry3.py  pymavlink_test.py  setPX4flowParam.py  test1.py  test1_liad_lite_v3.py  tracking_pos_KF.py  tracking_posvel_KF.py  tracking_posvel_KF_color.py  tracking_vel_KF.py  tracking_vel_KF2.py  tracking_vel_KF_exp.py
src/KF/: KF.cpp
src/odom_pkg/: CMakeLists.txt
src/odom_pkg/src/: Serial_port_read1.cpp
(+163 files in other folders)
